# 26_ML_MIProject

./: README.md  pyproject.toml  requirements.txt
configs/: README.md
data/: README.md
notebooks/: README.md
results/: README.md
scripts/: convert_mmlu.py  eval_behavior.py  logit_lens.py
src/mi_repro/: __init__.py  data.py  logit_lens_utils.py  metrics.py  modeling.py  prompts.py
