[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mi-repro"
version = "0.1.0"
description = "Mechanistic interpretability reproduction utilities for LLM sycophancy experiments"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
